# var_es_dgm

./: pyproject.toml
experiments/multivariate/: multivariate_1%_tuned.ipynb  multivariate_5%_tuned.ipynb  multivariate_default.ipynb
experiments/univariate/: univariate_1%_tuned.ipynb  univariate_5%_tuned.ipynb  univariate_default.ipynb
results/checkpoints/univariate_timegrad_1pct/: repeat_0.pt  repeat_1.pt
results/logs/univariate_timegrad_1pct/: repeat_0.json  repeat_1.json
var_es_dgm/basic_models/: deepar.py  deepvar.py  hist_sim.py
var_es_dgm/experiments/: __init__.py  cli.py
var_es_dgm/stat_tests/: report.py  var_tests.py
var_es_dgm/utils/: var_es_torch.py
