[tool.poetry]
name = "var-es-dgm"
version = "0.1.0"
description = ""
authors = ["ptrbelonovsky <p.belonovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
matplotlib = "^3.9.0"
diffusers = {extras = ["torch"], version = "^0.27.2"}
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
yfinance = "^0.2.40"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"
optuna = "^3.6.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
huggingface-hub = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
